--- a/codeisc/templates/codeisc/includes/code.html
+++ b/codeisc/templates/codeisc/includes/code.html
@@ -8,7 +8,7 @@
         {% endpygmentify %}
     </div>
     <button type="button" style="display: none" id="expand-button">Expand</button>
-    <a class="appearance-none" href="{% url 'userProfile' username=question.author.username %}">
+    <a class="appearance-none" href="{% url 'userProfile' username=code.author.username %}">
         <div class="flex items-center text-gray-500 mt-2">
             <div class="mr-2">{{ code.created_at|date:"F j, Y" }}</div>
             <img
