--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -17,7 +17,9 @@
     {% endblock title %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="{% static 'script.js' %}"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     {% block styles %}
 
     {% endblock styles %}
