--- a/codeisc/templates/codeisc/search_result_page.html
+++ b/codeisc/templates/codeisc/search_result_page.html
@@ -9,7 +9,7 @@
                 {% include 'codeisc/includes/question.html' with question=question %}
             {% endfor %}
         </div>
-        <div class="space-y-4 fixed inset-0">
+        <div class="space-y-4 fixed inset-0 hidden">
             {% for code in codes %}
                 {% include 'codeisc/includes/code.html' with code=code %}
             {% endfor %}
