--- a/codeisc/templates/codeisc/includes/answer.html
+++ b/codeisc/templates/codeisc/includes/answer.html
@@ -1,9 +1,9 @@
 {% load language_map %}
 <div class="bg-gray-200 p-4 mb-2 rounded-lg shadow">
     <h2 class="text-2xl font-bold">{{ answer.short_description }}</h2>
-    <p class="text-gray-600">{{ answer.description }}</p>
+    <p class="text-gray-700">{{ answer.description }}</p>
 
-    <div class="flex flex-row bg-gray-100 p-4">
+    <div class="flex flex-row p-4">
         {% for code in answer.code.all %}
             {% include 'codeisc/includes/code.html' with code=code code_language=language_mapping|get_from_dict:code.type %}
         {% endfor %}
