--- a/codeisc/templates/codeisc/question_page.html
+++ b/codeisc/templates/codeisc/question_page.html
@@ -4,7 +4,7 @@
 {% endblock title %}
 {% load language_map %}
 {% block content %}
-    <div class="container mx-auto my-4 p-4 bg-teal-50 rounded-lg">
+    <div class="container mx-auto my-4 p-4 bg-neutral-200 rounded-lg">
         <h1 class="text-4xl font-bold">{{ question.short_description }}</h1>
         <p class="my-4">{{ question.description }}</p>
         <div class="mt-4">
@@ -24,7 +24,7 @@
                href="{% url 'CreateAnswer' questionID=question.pk %}">Post Your Own Answer</a>
 
         </div>
-        <div class="mt-6 bg-white p-4 rounded-lg">
+        <div class="mt-6 bg-neutral-100 p-4 rounded-lg">
             <p class="text-sm font-semibold"><a href="{% url 'userProfile' username=question.author.username %}"
                                                 class="text-blue-500">
                 <div class="flex items-center flex-column text-gray-500 mt-2">
