--- a/codeisc/templates/codeisc/includes/answer.html
+++ b/codeisc/templates/codeisc/includes/answer.html
@@ -1,5 +1,5 @@
 {% load language_map %}
-<div class="bg-gray-200 p-4 mb-2 rounded-lg shadow">
+<div class="bg-gray-200 p-4 mb-2 rounded-lg shadow border border-black">
     <h2 class="text-2xl font-bold">{{ answer.short_description }}</h2>
     <p class="text-gray-700">{{ answer.description }}</p>
 
