--- a/codeisc/templates/codeisc/includes/question.html
+++ b/codeisc/templates/codeisc/includes/question.html
@@ -1,6 +1,6 @@
-<div class="bg-white p-4 rounded-lg shadow">
+<div class="bg-white p-4 rounded-lg shadow m-2">
     <a class="appearance-none" href="{% url 'QuestionPage' questionID=question.pk %}">
-        <h2 class="text-2xl font-bold">{{ question.short_description }}</h2>
+        <h2 class="text-md sm:text-xl md:text-2xl font-bold">{{ question.short_description }}</h2>
         <p class="text-gray-600">{{ question.description|truncatechars:100 }}</p>
         <a class="appearance-none" href="{% url 'userProfile' username=question.author.username %}">
             <div class="flex items-center text-gray-500 mt-2">
