added tags to question and codes

--- a/codeisc/templates/codeisc/create_code_page.html
+++ b/codeisc/templates/codeisc/create_code_page.html
@@ -9,24 +9,12 @@
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Title</label>
             {{ form.short_description }}
-            {% if form.short_description.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.short_description.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
+
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Description</label>
             {{ form.description }}
-            {% if form.description.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.description.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
+
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Code</label>
@@ -42,17 +30,24 @@
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Type</label>
             {{ form.type }}
-            {% if form.type.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.type.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
+
+        </div>
+        <div class="mb-4">
+            <label class="block text-center font-bold text-lg mb-2">Select Tags</label>
+            {{ form.tags }}
         </div>
         <div class="flex items-center justify-center">
             <input type="submit" value="Post A Code"
                    class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
         </div>
+        {% if form.errors %}
+            <ul class="text-red-900 list-disc pl-4 mt-2">
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                        <li>{{ field }}: {{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+        {% endif %}
     </form>
 {% endblock %}
