--- a/codeisc/templates/codeisc/create_question_page.html
+++ b/codeisc/templates/codeisc/create_question_page.html
@@ -11,40 +11,33 @@
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Title</label>
             {{ form.short_description }}
-            {% if form.short_description.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.short_description.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Description</label>
             {{ form.description }}
-            {% if form.description.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.description.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Select Codes</label>
             {{ form.code }}
-            {% if form.code.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.code.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
+
             <a href="{% url 'CreateCode' %}" class="block m-2 text-lg text-emerald-800">Create A Code</a>
+        </div>
+        <div class="mb-4">
+            <label class="block text-center font-bold text-lg mb-2">Select Tags</label>
+            {{ form.tags }}
         </div>
         <div class="flex items-center justify-center">
             <input type="submit" value="Post"
                    class="hover:bg-gray-200 bg-blue-500 hover:border-stone-900 hover:text-blue-700 font-semibold text-white py-2 px-4 border border-blue-500 rounded">
         </div>
+        {% if form.errors %}
+            <ul class="text-red-900 list-disc pl-4 mt-2">
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                        <li>{{ field }}: {{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+        {% endif %}
     </form>
 {% endblock %}
