--- a/codeisc/templates/codeisc/includes/tag.html
+++ b/codeisc/templates/codeisc/includes/tag.html
@@ -1,3 +1,3 @@
-<div class="bg-sky-700 rounded-2xl text-blue-800 m-2 p-2">
+<span class="bg-sky-700 rounded-2xl text-blue-800 m-2 p-2">
     {{ tag.name }}
-</div>
+</span>
