--- a/codeisc/templates/codeisc/question_page.html
+++ b/codeisc/templates/codeisc/question_page.html
@@ -12,17 +12,10 @@
                 {% include 'codeisc/includes/code.html' with code=code code_language=language_mapping|get_from_dict:code.type %}
             {% endfor %}
         </div>
-
-        <h2 class="text-2xl font-bold mt-6">Answers</h2>
-        <div class="mt-4">
-            {% for answer in answers %}
-                {% include 'codeisc/includes/answer.html' with answer=answer %}
-            {% empty %}
-                No Answer Available
+        <div class="mt-6 p-4 bg-stone-50">
+            {% for tag in code.tags.all %}
+                {% include 'codeisc/includes/tag.html' with tag=tag %}
             {% endfor %}
-            <a class="block appearance-none py-2 px-4 border border-blue-500 rounded text-center"
-               href="{% url 'CreateAnswer' questionID=question.pk %}">Post Your Own Answer</a>
-
         </div>
         <div class="mt-6 bg-neutral-100 p-4 rounded-lg">
             <p class="text-sm font-semibold"><a href="{% url 'userProfile' username=question.author.username %}"
@@ -36,6 +29,18 @@
                 </div>
             </a></p>
             <p class="text-sm">Created at: {{ question.created_at|date:"F j, Y" }}</p>
+        </div>
+
+        <h2 class="text-2xl font-bold mt-6">Answers</h2>
+        <div class="mt-4">
+            {% for answer in answers %}
+                {% include 'codeisc/includes/answer.html' with answer=answer %}
+            {% empty %}
+                No Answer Available
+            {% endfor %}
+            <a class="block appearance-none py-2 px-4 border border-blue-500 rounded text-center"
+               href="{% url 'CreateAnswer' questionID=question.pk %}">Post Your Own Answer</a>
+
         </div>
     </div>
 {% endblock %}
