--- a/codeisc/templates/codeisc/create_question_page.html
+++ b/codeisc/templates/codeisc/create_question_page.html
@@ -3,7 +3,15 @@
 {% block title %}
     MiniCodes - Ask a Question
 {% endblock %}
-
+{% block styles %}<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>{% endblock %}
+{% block scripts %}
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+            integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script>$(document).ready(function () {
+        $('.select2').select2();
+    });</script>
+{% endblock %}
 {% block content %}
     <form method="post" id="questionCreateForm"
           class="bg-gray-200 w-1/2 mx-auto items-center justify-center px-5 border-2 border-teal-500 py-3 rounded my-4">
