--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -34,9 +34,18 @@
                         <a href="{% url 'search' %}" class="text-gray-600 hover:text-blue-500">Search</a>
                     </li>
                     <hr class="bg-black h-[2px]">
-                    <li class="my-2 p-2 rounded-lg">
-                        <a href="{% url 'logout' %}" class="text-red-900 hover:text-blue-500 font-semibold">Log out</a>
-                    </li>
+                    {% if user %}
+                        <li class="my-2 p-2 rounded-lg">
+                            <a href="{% url 'logout' %}" class="text-red-900 hover:text-blue-500 font-semibold">Log
+                                out</a>
+                        </li>
+                    {% else %}
+                        <li class="my-2 p-2 rounded-lg">
+                            <a href="{% url 'login' %}" class="text-red-900 hover:text-blue-500 font-semibold">Log
+                                In</a>
+                        </li>
+
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -48,7 +57,8 @@
         </div>
         <div class="flex items-center flex-grow m-2 sm:flex-row">
             <div class="flex items-center bg-white rounded-lg w-max sm:w-full">
-                <i class="fa fa-search px-4 border-none sm:border-r-2 border-gray-700 m-2 sm:m-0" aria-hidden="true"></i>
+                <i class="fa fa-search px-4 border-none sm:border-r-2 border-gray-700 m-2 sm:m-0"
+                   aria-hidden="true"></i>
                 <input
                         type="text"
                         id="searchInput"
