--- a/codeisc/templates/codeisc/includes/code.html
+++ b/codeisc/templates/codeisc/includes/code.html
@@ -1,20 +1,22 @@
 {% load pygmentify_tags %}
 
 <div class="bg-white p-4 rounded-lg shadow mb-2 w-full">
-    <h2 class="text-2xl font-bold">{{ code.short_description }}</h2>
-    <div class="mb-4">
-        {% pygmentify %}
-            <pre class="{{ code_language }} code-block bg-gray-200 rounded-lg p-2">{{ code.code_text }}</pre>
-        {% endpygmentify %}
-    </div>
-    <a class="appearance-none" href="{% url 'userProfile' username=code.author.username %}">
-        <div class="flex items-center text-gray-500 mt-2">
-            <div class="mr-2">{{ code.created_at|date:"F j, Y" }}</div>
-            <img
-                    class="h-6 w-6 rounded-full"
-                    src="{{ code.author.profile.url }}"
-                    alt="{{ code.author.username }} profile picture"
-            />
+    <a class="appearance-none" href="{% url 'QuestionPage' questionID=question.pk %}">
+        <h2 class="text-2xl font-bold">{{ code.short_description }}</h2>
+        <div class="mb-4">
+            {% pygmentify %}
+                <pre class="{{ code_language }} code-block bg-gray-200 rounded-lg p-2">{{ code.code_text }}</pre>
+            {% endpygmentify %}
         </div>
+        <a class="appearance-none" href="{% url 'userProfile' username=code.author.username %}">
+            <div class="flex items-center text-gray-500 mt-2">
+                <div class="mr-2">{{ code.created_at|date:"F j, Y" }}</div>
+                <img
+                        class="h-6 w-6 rounded-full"
+                        src="{{ code.author.profile.url }}"
+                        alt="{{ code.author.username }} profile picture"
+                />
+            </div>
+        </a>
     </a>
 </div>
