--- a/codeisc/templates/codeisc/includes/code.html
+++ b/codeisc/templates/codeisc/includes/code.html
@@ -1,7 +1,7 @@
 {% load pygmentify_tags %}
 
 <div class="bg-white p-4 rounded-lg shadow mb-2 w-full">
-    <a class="appearance-none" href="{% url 'QuestionPage' questionID=question.pk %}">
+    <a class="appearance-none" href="{% url 'CodePage' codeID=code.pk %}">
         <h2 class="text-2xl font-bold">{{ code.short_description }}</h2>
         <div class="mb-4">
             {% pygmentify %}
