--- a/codeisc/templates/codeisc/code_page.html
+++ b/codeisc/templates/codeisc/code_page.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="flex flex-col items-center justify-center h-screen">
-        <div class="max-w-3xl w-full">
+        <div class="w-full">
             <div class="bg-white shadow-lg p-6">
                 <h1 class="text-xl font-semibold mb-4">{{ code.short_description }}</h1>
                 <div class="mb-4">
