--- a/codeisc/templates/codeisc/code_page.html
+++ b/codeisc/templates/codeisc/code_page.html
@@ -9,7 +9,7 @@
         <div class="w-full">
             <div class="bg-white shadow-lg p-6">
                 <h1 class="text-xl font-semibold mb-4">{{ code.short_description }}</h1>
-                <div class="mb-4">
+                <div class="mb-4 text-xs md:text-lg sm:text-md">
                     {% pygmentify %}
                         <pre class="{{ code_language }} code-block bg-gray-200 rounded-lg p-2">{{ code.code_text }}
                     </pre>
